// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaCard should render a custom cta element 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root sc-gsTCUz fFbheE MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-content-xs-flex-start MuiGrid-grid-xs-10 MuiGrid-grid-sm-5 MuiGrid-grid-md-3"
    >
      <img
        alt=""
        height="193"
        src="https://placekeanu.com/318/159/g"
        width="386"
      />
      <div
        class="MuiGrid-root sc-dlfnbm gQaIiI MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-content-xs-space-between MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <h4
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h4>
          <p>
            this is information about gradleaders
          </p>
        </div>
        <a
          href="https://google.com"
          title="Search Google"
        >
          Google
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`MediaCard should render a custom image element 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root sc-gsTCUz fFbheE MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-content-xs-flex-start MuiGrid-grid-xs-10 MuiGrid-grid-sm-5 MuiGrid-grid-md-3"
    >
      <img
        alt=""
        role="presentation"
        src="https://placekeanu.com/318/159/g"
      />
      <div
        class="MuiGrid-root sc-dlfnbm gQaIiI MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-content-xs-space-between MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <h4
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h4>
          <p>
            this is information about gradleaders
          </p>
        </div>
        <button
          class="sc-bdfBwQ fWwvgz"
        >
          View Gradleaders
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`MediaCard should render children 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root sc-gsTCUz fFbheE MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-content-xs-flex-start MuiGrid-grid-xs-10 MuiGrid-grid-sm-5 MuiGrid-grid-md-3"
    >
      <img
        alt=""
        height="193"
        src="https://placekeanu.com/318/159/g"
        width="386"
      />
      <div
        class="MuiGrid-root sc-dlfnbm gQaIiI MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-content-xs-space-between MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <h4
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h4>
          <p>
            this is information about gradleaders
          </p>
        </div>
        <button
          class="sc-bdfBwQ fWwvgz"
        >
          View Gradleaders
        </button>
      </div>
    </div>
  </div>
</body>
`;
